<resources>
    <string name="current_version">1.0.0</string>
    <string name="app_name">Hỏi đáp trực tuyến</string>
    <string name="splash_app_title">Hỏi đáp trực tuyến</string>
    <string name="splash_create_session_error">Create session errors:</string>
    <string name="dlg_signal_error">Disconnected… Please check your Internet connection!</string>
    <string name="dlg_login">Login…</string>
    <string name="dlg_sign_in">Sign In…</string>
    <string name="dlg_updating_user">Updating user…</string>
    <string name="dlg_creating_new_user">Creating new user…</string>
    <string name="dlg_logout">Logout…</string>
    <string name="dlg_loading_opponents">Loading opponents…</string>
    <string name="error_max_opponents_count">You can select up to %d opponents</string>
    <string name="sign_up_error">Error creating new user, please try again</string>
    <string name="sign_in_error_with_error">Sign In error. Error</string>
    <string name="sign_in_error_without_error">Sign In error</string>
    <string name="logout_user_with_error">Logout user error. Error</string>
    <string name="error_empty_login">Login can not be empty</string>
    <string name="error_empty_chat_room_name">Chat room name can not be empty</string>
    <string name="login_chat_login_error">Login Chat error. Please relogin. Error</string>
    <string name="update_user_error">Update user error. Error</string>
    <string name="loading_users_error">Loading users error. Error</string>
    <string name="permission_unavailable">%s is not available now!</string>
    <string name="field_name_user_name">User name</string>
    <string name="field_name_chat_room_name">Chat room name</string>
    <string name="error_name_must_not_contain_special_characters_from_app">%1$s must contain 3 &#8212; %2$s alphanumeric Latin characters without space, the first char must be a letter</string>
    <string name="action_start_login">Done</string>
    <string name="action_settings">Settings</string>
    <string name="action_screen_share">Screen share</string>
    <string name="action_update_opponens_list">Update opponents list</string>
    <string name="action_logout">Logout</string>
    <string name="action_start_video_call">Video call</string>
    <string name="action_start_audio_call">Audio call</string>
    <string name="actionbar_title_settings">Settings</string>
    <string name="title_login_activity">Enter to chat</string>
    <string name="subtitle_text_logged_in_as">Logged in as %s</string>
    <string name="title_one_user_selected">%s user selected</string>
    <string name="tile_many_users_selected">%s users selected</string>
    <string name="incoming_call">Incoming Call</string>
    <string name="also_on_call">Also on call:</string>
    <string name="edit_opponents_list">Edit opponents list</string>
    <string name="incoming_audio_call">Incoming Audio Call</string>
    <string name="incoming_video_call">Incoming Video Call</string>
    <string name="outgoing_audio_video_call_title">%s\n\nRinging</string>
    <string name="user_list_on_call">User 1, User 2, User 3, User 4, User 5, User 6</string>
    <string name="opponent_pending">Pending</string>
    <string name="opponent_closed">Closed</string>
    <string name="text_incoming_audio_call">Incoming Audio Call</string>
    <string name="text_incoming_video_call">Incoming Video Call</string>
    <string name="text_status_connect">Connect…</string>
    <string name="text_status_checking">Checking…</string>
    <string name="text_status_connected">Connected</string>
    <string name="text_status_disconnected">Disconnected</string>
    <string name="text_status_rejected">Rejected</string>
    <string name="text_status_no_answer">No answer</string>
    <string name="text_status_hang_up">Hung up</string>
    <string name="text_status_closed">Closed</string>
    <string name="text_status_time_out">Time Out</string>
    <string name="text_status_failed">Failed</string>
    <string name="text_welcoming_message">Please enter username and chat room name. \nYou can join existed chat room.</string>
    <string name="hint_user_name">User name</string>
    <string name="hint_chat_room_name">Chat room name</string>
    <string name="text_select_user_to_call">Select users you want to call</string>
    <string name="call_was_stopped_connection_lost">Call was stopped because connection was lost</string>
    <string name="connection_lost">Connection lost</string>
    <string name="text_push_notification_message">"%s is calling you"</string>
    <string name="title_video_category">Video</string>
    <string name="title_call_settings_category">Call Settings</string>
    <string name="pref_default_value">Default</string>
    <string name="pref_default_camera_key">default_camera_preference</string>
    <string name="pref_default_camera_title">Default Camera</string>
    <string name="pref_default_camera_dlg">Select default camera</string>
    <string name="pref_default_camera_default">0</string>
    <string name="pref_frame_rate_key">frame_rate</string>
    <string name="pref_frame_rate_title">Frame Rate (0&#8211;30)</string>
    <string name="pref_frame_rate_default">0</string>
    <string name="pref_resolution_key">resolution_preference</string>
    <string name="pref_resolution_title">Video Format</string>
    <string name="pref_resolution_dlg">Enter RTC local video resolution</string>
    <string name="pref_resolution_default">-1</string>
    <string name="pref_startbitrate_key">startbitrate_preference</string>
    <string name="pref_startbitrate_title">Start bitrate setting</string>
    <string name="pref_startbitrate_dlg">Start bitrate setting</string>
    <string name="pref_startbitrate_default">Default</string>
    <string name="pref_startbitratevalue_key">startbitratevalue_preference</string>
    <string name="pref_startbitratevalue_title">Bandwidth (0&#8211;2000)</string>
    <string name="pref_startbitratevalue_default">0</string>
    <string name="pref_disable_built_in_aec_key">disable_built_in_aec_preference</string>
    <string name="pref_disable_built_in_aec_title">Disable built-in AEC</string>
    <string name="pref_disable_built_in_aec_dlg">Disable built-in AEC</string>
    <string name="pref_disable_built_in_aec_default">false</string>
    <string name="pref_built_in_aec_not_available">Built-in AEC is not available</string>
    <string name="pref_opensles_key">opensles_preference</string>
    <string name="pref_opensles_title">Use OpenSL ES for audio playback</string>
    <string name="pref_opensles_dlg">Use OpenSL ES for audio playback</string>
    <string name="pref_opensles_default">false</string>
    <string name="pref_noaudioprocessing_key">audioprocessing_preference</string>
    <string name="pref_noaudioprocessing_title">Disable audio processing</string>
    <string name="pref_noaudioprocessing_dlg">Disable audio processing pipeline</string>
    <string name="pref_noaudioprocessing_default">false</string>
    <string name="pref_answer_time_interval_key">answer_time_interval</string>
    <string name="pref_answer_time_interval_title">Answer Time Interval (15&#8211;90s)</string>
    <string name="pref_answer_time_interval_default_value">60</string>
    <string name="pref_disconnect_time_interval_key">disconnect_time_interval</string>
    <string name="pref_disconnect_time_interval_title">Disconnect Time Interval (10&#8211;90s)</string>
    <string name="pref_disconnect_time_interval_default_value">10</string>
    <string name="pref_dialing_time_interval_key">Dialing_time_interval</string>
    <string name="pref_dialing_time_interval_title">Dialing Time Interval (3&#8211;10s)</string>
    <string name="pref_dialing_time_interval_default_value">5</string>
    <string name="pref_videocodec_key">videocodec_preference</string>
    <string name="pref_videocodec_title">Default video codec</string>
    <string name="pref_videocodec_dlg">Select default video codec</string>
    <string name="pref_videocodec_default">0</string>
    <string name="pref_hwcodec_key">hwcodec_preference</string>
    <string name="pref_hwcodec_title">Video codec hardware acceleration</string>
    <string name="pref_hwcodec_default">true</string>
    <string name="pref_value_enabled">Enabled</string>
    <string name="pref_value_disabled">Disabled</string>
    <string name="pref_room_server_url_key">room_server_url_preference</string>
    <string name="pref_room_server_url_title">Room server URL.</string>
    <string name="pref_room_server_url_dlg">Enter a room server URL.</string>
    <string name="pref_room_server_url_default" translatable="false">https://apprtc.appspot.com</string>
    <string name="pref_displayhud_key">displayhud_preference</string>
    <string name="pref_displayhud_title">Display call statistics.</string>
    <string name="pref_displayhud_dlg">Display call statistics.</string>
    <string name="pref_displayhud_default" translatable="false">false</string>
    <string name="pref_audiocodec_key">pref_audio_codec</string>
    <string name="pref_audiocodec_title">Default audio codec</string>
    <string name="pref_audiocodec_def">ISAC</string>
    <string name="pref_audiocodec_dlg">Select default audio codec</string>
    <string name="pref_version">QuickBlox WebRTC\nBuild version 1.12</string>
    <string name="btn_screen_capture">screenShot</string>
    <string name="accepted">Accepted</string>
    <string name="connection_was_lost">Connection was lost</string>
    <string name="opponents">and %s other</string>
    <string name="opponent">and %s </string>
    <string name="ringing">Ringing</string>
    <string name="stop_share">Stop</string>
    <string name="camera_swicth_failed">\"Failed switch camera\"</string>
    <string name="sender_id">761750217637</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="SignUp">Sign up</string>
    <string name="UserName">User name</string>
    <string name="Password">Password</string>
    <string name="ConfirmPassword">Confirm password</string>
    <string name="Email">Email</string>
    <string name="FullName">Full name</string>
    <string name="Edit_Infor">Edit Info</string>
    <string name="Complete_Update_Infor">Complete update</string>
    <string name="Send_email_to_change_password">Send email to change password</string>
    <string name="Email_sent">Email has been sent</string>
    <string name="register_success">User has been registered, you must confirm your email to login \n Click Ok to login</string>
    <string name="fill_out_user_name">Please fill out user name</string>
    <string name="fill_out_password">Please fill out password</string>
    <string name="fill_out_confirm_password">Please fill out confirm password</string>
    <string name="fill_out_email">Please fill out email</string>
    <string name="fill_out_full_name">Please fill out full name</string>
    <string name="fill_out_content_answer">Write your comment</string>
    <string name="fill_out_content_question">Write your question here</string>
    <string name="pls_check_confirm_password">Please check your confirm password</string>
    <string name="recieve_email_to_change_password">You will be received an email to change password</string>
    <string name="users">Users</string>
    <string name="email">email</string>
    <string name="full_name">full_name</string>
    <string name="id_qb">id_qb</string>
    <string name="is_employee">is_employee</string>
    <string name="is_online">is_online</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="tags">tags</string>
    <string name="user_name">user_name</string>
    <string name="question">Question</string>
    <string name="content_question">content</string>
    <string name="answers">answers</string>
    <string name="is_reply_question">is_reply</string>
    <string name="user">user</string>
    <string name="answer">Answer</string>
    <string name="content_answer">content_answer</string>
</resources>